cotoami_desktop/ui/assets/css/app/_geomap.scss
section.geomap {
  --marker-size: 30px;
  --marker-padding: 2px;
  --circle-marker-border-radius: calc(var(--marker-size) / 2);
  --label-width: 150px;
  --label-left: calc(((var(--label-width) / 2) - (var(--marker-size) / 2)) * -1);
  --icon-clip-length: calc((var(--marker-size) / 2) - var(--marker-padding));

  .focused-location-marker {
    z-index: 10;

    &:hover {
      cursor: pointer;
    }
  }

  div.geomap-marker {
    width: var(--marker-size);
    height: var(--marker-size);
    background-color: white;
    padding: var(--marker-padding);

    &:hover {
      cursor: pointer;
    }

    &.focused-marker {
      background-color: #ffa500;
    }

    div.icons {
      width: 100%;
      height: 100%;

      &.icon-count-2 {
        position: relative;

        img:first-child {
          position: absolute;
          top: 0;
          left: 0;
          clip-path: inset(0 var(--icon-clip-length) 0 0);
        }

        img:last-child {
          position: absolute;
          top: 0;
          right: 0;
          clip-path: inset(0 0 0 var(--icon-clip-length));
        }
      }

      &.icon-count-3 {
        position: relative;

        img:first-child {
          position: absolute;
          top: 0;
          left: 0;
          clip-path: inset(0 var(--icon-clip-length) 0 0);
        }

        img:nth-child(2) {
          position: absolute;
          top: 0;
          right: 0;
          clip-path: inset(0 0 var(--icon-clip-length) var(--icon-clip-length));
        }

        img:last-child {
          position: absolute;
          bottom: 0;
          right: 0;
          clip-path: inset(var(--icon-clip-length) 0 0 var(--icon-clip-length));
        }
      }

      &.icon-count-4 {
        position: relative;

        img:first-child {
          position: absolute;
          top: 0;
          left: 0;
          clip-path: inset(0 var(--icon-clip-length) var(--icon-clip-length) 0);
        }

        img:nth-child(2) {
          position: absolute;
          top: 0;
          right: 0;
          clip-path: inset(0 0 var(--icon-clip-length) var(--icon-clip-length));
        }

        img:nth-child(3) {
          position: absolute;
          bottom: 0;
          left: 0;
          clip-path: inset(var(--icon-clip-length) var(--icon-clip-length) 0 0);
        }

        img:last-child {
          position: absolute;
          bottom: 0;
          right: 0;
          clip-path: inset(var(--icon-clip-length) 0 0 var(--icon-clip-length));
        }
      }
    }

    img.icon {
      width: 100%;
      height: 100%;
      opacity: 0.3;
    }

    &.coto-marker {
      z-index: 1;
      border-radius: var(--circle-marker-border-radius);

      img {
        border-radius: var(--circle-marker-border-radius);
      }
    }

    &.cotonoma-marker {
      z-index: 2;
      border-radius: 4px;

      img {
        border-radius: 4px;
      }
    }

    .label {
      position: absolute;
      left: var(--label-left);

      padding-top: 4px;

      width: var(--label-width);
      font-size: 12px;
      font-weight: 600;
      line-height: 14px;
      color: #333;
      text-shadow:
        1px 1px 1px white,
        -1px 1px 1px white,
        -1px -1px 1px white,
        1px -1px 1px white;
      text-align: center;
      opacity: 0.3;
      // border: 1px solid black;
    }

    .count-of-cotos {
      position: absolute;
      top: -10px;
      right: -10px;

      border-radius: 12px;
      padding: 1px 8px;

      background-color: #1e90ff;
      color: white;
      text-align: center;
      font-weight: 500;
      opacity: 0.3;
    }

    &.in-focus {

      img,
      .label,
      .count-of-cotos {
        opacity: 1;
      }
    }

    &.in-focus.coto-marker {
      z-index: 3;
    }

    &.in-focus.cotonoma-marker {
      z-index: 4;
    }
  }

  // make space for pane-toggle
  .maplibregl-ctrl-top-right {
    top: 8px;
    right: 8px;
  }

  div.maplibregl-popup {
    z-index: 5;

    div.geomap-marker-popup {
      div.image img {
        width: auto;
        height: auto;
        max-height: 150px;
      }

      div.text {
        color: #333;
      }
    }
  }
}

.geomap-container.hide-labels .label,
.geomap-container.hide-labels .count-of-cotos {
  display: none;
}

